--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "url": "https://github.com/VanijaDev/versus/issues"
   },
   "homepage": "https://github.com/VanijaDev/versus#readme",
+  "devDependencies": {
+    "@openzeppelin/test-helpers": "0.5.13",
+    "chai": "4.3.4"
+  },
   "dependencies": {
-    "@openzeppelin/contracts": "4.3.1"
+    "@openzeppelin/contracts": "4.3.2"
   }
 }
