--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/VanijaDev/versus#readme",
   "devDependencies": {
-    "@openzeppelin/test-helpers": "0.5.15"
+    "@openzeppelin/test-helpers": "0.5.15",
+    "truffle-contract-size": "2.0.1"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "4.3.2"
+    "@openzeppelin/contracts": "4.3.2",
+    "@uniswap/v2-core": "1.0.1"
   }
 }
